--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://imnishantdevops.github.io/"
+baseURL = "https://imnishant.com/"
 languageCode = "en-us"
 title = "Nishant | SRE / DevOps"
 theme = "PaperMod"
