--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://nishantkamal.github.io/"
+baseURL = "https://nishant-kamal.github.io/"
 languageCode = "en-us"
 title = "Nishant Kamal | SRE / DevOps"
 theme = "PaperMod"
