--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = "https://nishant-kamal.github.io/"
 languageCode = "en-us"
-title = "Nishant Kamal | SRE / DevOps"
+title = "Nishant Kamal | SRE / DevOps / Platform"
 theme = "PaperMod"
 enableRobotsTXT = true
 
