--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,8 @@
-baseURL = "https://nishant-kamal.github.io/"
+[[params.socialIcons]]
+  name = "email"
+  url = "mailto:your@email.com"[[params.socialIcons]]
+  name = "email"
+  url = "mailto:your@email.com"baseURL = "https://nishant-kamal.github.io/"
 languageCode = "en-us"
 title = "Nishant Kamal | SRE / DevOps / Platform"
 theme = "PaperMod"
@@ -73,7 +77,7 @@ enableRobotsTXT = true
   url = "https://x.com/imnishant19"  
 
 [[params.socialIcons]]
-  name = "email"
+  name = "gmail"
   url = "mailto:nishant.kamal2015@gmail.com"  
 # --------------------------------------------------
 # TOP NAVIGATION MENU
