--- a/hugo.toml
+++ b/hugo.toml
@@ -74,7 +74,7 @@ enableRobotsTXT = true
 
 [[params.socialIcons]]
   name = "email"
-  url = "mailto:nishant.kamal2015@gmail.com?subject=Hello%20Nishant&body=Found%20your%20site%20via%20GitHub%20Pages" 
+  url = "/contact/"
 # --------------------------------------------------
 # TOP NAVIGATION MENU
 # --------------------------------------------------
